--- a/eventos.html
+++ b/eventos.html
@@ -29,42 +29,44 @@
     </header>
 
     <main>
-        <section class="noticias">
-            <h1>Notícias de Esportes</h1>
+        <div class="outras-noticias">
+            <h1>Notícias do IFSul</h1>
             <div class="noticia">
-                <img src="esporte1.jpg" alt="Notícia 1">
-                <p>Campeonato de Futsal do IFSul reúne dezenas de alunos</p>
+                <img src="img/DSC_0709.jpg" alt="Notícia 1">
+                <a href="#"><p>Semana Acadêmica do IFSul promove palestras e workshops inovadores</p></a>
             </div>
             <div class="noticia">
-                <img src="esporte2.jpg" alt="Notícia 2">
-                <p>Equipe de Vôlei conquista medalha de ouro no estadual</p>
+                <img src="img/DSC_0709.jpg" alt="Notícia 2">
+                <a href="#"><p>Feira de Tecnologia do IFSul apresenta projetos revolucionários</p></a>
             </div>
             <div class="noticia">
-                <img src="esporte3.jpg" alt="Notícia 3">
-                <p>Atletas do IFSul se destacam em competição nacional</p>
+                <img src="img/DSC_0709.jpg" alt="Notícia 3">
+                <a href="#"><p>Alunos do IFSul arrecadam doações em campanha solidária</p></a>
             </div>
             <div class="noticia">
-                <img src="esporte4.jpg" alt="Notícia 4">
-                <p>IFSul realiza campeonato de tênis de mesa</p>
+                <img src="img/DSC_0709.jpg" alt="Notícia 4">
+                <a href="#"><p>IFSul realiza mostra cultural com apresentações artísticas dos estudantes</p></a>
             </div>
             <div class="noticia">
-                <img src="esporte5.jpg" alt="Notícia 5">
-                <p>Estudantes participam de corrida de rua organizada pelo IFSul</p>
+                <img src="img/DSC_0709.jpg" alt="Notícia 5">
+                <a href="#"><p>Oficina de programação atrai novos talentos no campus do IFSul</p></a>
             </div>
             <div class="noticia">
-                <img src="esporte6.jpg" alt="Notícia 6">
-                <p>Equipe de futebol feminino do IFSul vence torneio interinstitucional</p>
+                <img src="img/DSC_0709.jpg" alt="Notícia 6">
+                <a href="#"><p>IFSul realiza competição de robótica com recorde de equipes inscritas</p></a>
             </div>
             <div class="noticia">
-                <img src="esporte7.jpg" alt="Notícia 7">
-                <p>Atletas do IFSul ganham prêmio de melhor desempenho acadêmico e esportivo</p>
+                <img src="img/DSC_0709.jpg" alt="Notícia 7">
+                <a href="#">p>Projeto de sustentabilidade do IFSul ganha destaque em evento estadual</p></a>
             </div>
             <div class="noticia">
-                <img src="esporte8.jpg" alt="Notícia 8">
-                <p>IFSul realiza aula aberta sobre preparação física para atletas</p>
+                <img src="img/DSC_0709.jpg" alt="Notícia 8">
+                <a href="#"><p>Alunos do IFSul participam de simulação de conferência internacional</p></a>
             </div>
-        </section>
+        </div>
     </main>
+    
+
 
     <footer>
         <div class="logos">
