--- a/index.html
+++ b/index.html
@@ -78,15 +78,24 @@
 
         <section class="depoimentos">
             <h2>O que os alunos estão dizendo:</h2>
-            <div class="depoimento">
+            <div class="depoimento depoimento-ativo">
                 <p>"O IFSul tem sido uma ótima experiência para minha formação."</p>
                 <p>- João, aluno de Engenharia</p>
             </div>
             <div class="depoimento">
                 <p>"Adoro as oportunidades de estágio e as atividades extracurriculares."</p>
-                <p>- Maria, aluna de Ciências da Computação</p>
+                <p>- Jewan, aluna de Ciências da Computação</p>
+            </div>
+            <div class="depoimento">
+                <p>"Adoro as oportunidades de estágio e as atividades extracurriculares."</p>
+                <p>- luis, aluna de Ciências da Computação</p>
+            </div>
+            <div class="depoimento">
+                <p>"Adoro as oportunidades de estágio e as atividades extracurriculares."</p>
+                <p>- mario, aluna de Ciências da Computação</p>
             </div>
         </section>
+        
     </main>
 
     <footer>
