--- a/noticia.html
+++ b/noticia.html
@@ -8,20 +8,26 @@
 </head>
 <body>
     <header>
-        <div class="logo">
-            <img src="logo_ifsul.png" alt="Logo do IFSul">
-        </div>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="categoria.html">Esportes</a></li>
-                <li><a href="categoria.html">Eventos</a></li>
-                <li><a href="categoria.html">Institucional</a></li>
-                <li><a href="categoria.html">Premiações</a></li>
-                <li><a href="envie-noticia.html">Envie uma notícia</a></li>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li class="menu-categorias">
+                    <a href="#">Categorias</a>
+                    <ul class="categorias">
+                        <li><a href="categoria.html">Esportes</a></li>
+                        <li><a href="#">Eventos</a></li>
+                        <li><a href="#">Institucional</a></li>
+                        <li><a href="#">Premiações</a></li>
+                        <li><a href="#">Envie uma notícia</a></li>
+                    </ul>
+                </li>
             </ul>
         </nav>
     </header>
+    
+
 
     <main>
         <section class="noticia-detalhes">
@@ -40,8 +46,8 @@
 
     <footer>
         <div class="logos">
-            <a href="https://www.utu.edu.uy" target="_blank"><img src="logo_utu.png" alt="Logo UTU"></a>
-            <a href="https://www.utec.edu.uy" target="_blank"><img src="logo_utec.png" alt="Logo UTEC"></a>
+            <a href="https://utu.edu.uy" target="_blank"><img src="img/UTU_logo.png" alt="Logo UTU"></a>
+            <a href="https://utec.edu.uy" target="_blank"><img src="img/UTEC_logo.png" alt="Logo UTEC"></a>
         </div>
     </footer>
 
