--- a/eventos.html
+++ b/eventos.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IFNews - Categoria de Notícias</title>
+    <title>IFNews - Eventos</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
+
 <body>
     <header>
         <div class="logo">
-            <img src="img/IFSUL_logo.png" alt="Logo do IFSul">
+            <img src="img/IFSUL_logo.png">
         </div>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
                 <li class="menu-categorias">
-                    <a href="#">Categorias</a>
+                    <a>Categorias</a>
                     <ul class="categorias">
-                        <li><a href="categoria.html">Esportes</a></li>
-                        <li><a href="#">Eventos</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="#">Esportes</a></li>
+                        <li><a href="eventos.html">Eventos</a></li>
                         <li><a href="#">Institucional</a></li>
                         <li><a href="#">Premiações</a></li>
                         <li><a href="#">Envie uma notícia</a></li>
@@ -30,42 +31,57 @@
 
     <main>
         <div class="outras-noticias">
-            <h1>Notícias do IFSul</h1>
             <div class="noticia">
                 <img src="img/DSC_0709.jpg" alt="Notícia 1">
-                <a href="#"><p>Semana Acadêmica do IFSul promove palestras e workshops inovadores</p></a>
+                <a href="#">
+                    <p>Semana Acadêmica do IFSul promove palestras e workshops inovadores</p>
+                </a>
             </div>
             <div class="noticia">
                 <img src="img/DSC_0709.jpg" alt="Notícia 2">
-                <a href="#"><p>Feira de Tecnologia do IFSul apresenta projetos revolucionários</p></a>
+                <a href="#">
+                    <p>Feira de Tecnologia do IFSul apresenta projetos revolucionários</p>
+                </a>
             </div>
             <div class="noticia">
                 <img src="img/DSC_0709.jpg" alt="Notícia 3">
-                <a href="#"><p>Alunos do IFSul arrecadam doações em campanha solidária</p></a>
+                <a href="#">
+                    <p>Alunos do IFSul arrecadam doações em campanha solidária</p>
+                </a>
             </div>
             <div class="noticia">
                 <img src="img/DSC_0709.jpg" alt="Notícia 4">
-                <a href="#"><p>IFSul realiza mostra cultural com apresentações artísticas dos estudantes</p></a>
+                <a href="#">
+                    <p>IFSul realiza mostra cultural com apresentações artísticas dos estudantes</p>
+                </a>
             </div>
             <div class="noticia">
                 <img src="img/DSC_0709.jpg" alt="Notícia 5">
-                <a href="#"><p>Oficina de programação atrai novos talentos no campus do IFSul</p></a>
+                <a href="#">
+                    <p>Oficina de programação atrai novos talentos no campus do IFSul</p>
+                </a>
             </div>
             <div class="noticia">
                 <img src="img/DSC_0709.jpg" alt="Notícia 6">
-                <a href="#"><p>IFSul realiza competição de robótica com recorde de equipes inscritas</p></a>
+                <a href="#">
+                    <p>IFSul realiza competição de robótica com recorde de equipes inscritas</p>
+                </a>
             </div>
             <div class="noticia">
                 <img src="img/DSC_0709.jpg" alt="Notícia 7">
-                <a href="#">p>Projeto de sustentabilidade do IFSul ganha destaque em evento estadual</p></a>
+                <a href="#">
+                    <p>Projeto de sustentabilidade do IFSul ganha destaque em evento estadual</p>
+                </a>
             </div>
             <div class="noticia">
                 <img src="img/DSC_0709.jpg" alt="Notícia 8">
-                <a href="#"><p>Alunos do IFSul participam de simulação de conferência internacional</p></a>
+                <a href="#">
+                    <p>Alunos do IFSul participam de simulação de conferência internacional</p>
+                </a>
             </div>
         </div>
     </main>
-    
+
 
 
     <footer>
@@ -77,4 +93,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
