--- a/index.html
+++ b/index.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IFNews - Página Inicial</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
+
 <body>
     <header>
         <div class="logo">
-            <img src="img/IFSUL_logo.png" alt="Logo do IFSul">
+            <img src="img/IFSUL_logo.png">
         </div>
         <nav>
             <ul>
                 <li class="menu-categorias">
-                    <a href="#">Categorias</a>
+                    <a>Categorias</a>
                     <ul class="categorias">
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="#">Esportes</a></li>
-                        <li><a href="#">Eventos</a></li>
+                        <li><a href="eventos.html">Eventos</a></li>
                         <li><a href="#">Institucional</a></li>
                         <li><a href="#">Premiações</a></li>
                         <li><a href="#">Envie uma notícia</a></li>
@@ -31,41 +33,58 @@
         <section class="noticias">
             <h1>Últimas Notícias</h1>
             <div class="noticia-destaque">
-                <img src="img/WhatsApp_Image_2024-11-28_at_124206_1.jpeg" alt="Notícia Destaque">
+                <img src="img/WhatsApp_Image_2024-11-28_at_124206_1.jpeg">
                 <div>
-                    <a href="#"><h2>Visita de Miguel Roberto Felberg e Viviane Hernandez Serpa Ribeiro, representantes da Coordenadoria de Interação com a Sociedade (COIS), Pró-reitoria de Extensão e Cultura (PROEX) do IFSul.</h2></a>
-                    <p>Na quarta-feira, 27 de novembro, tivemos a visita de Miguel Roberto Felberg e Viviane Hernandez Serpa Ribeiro, representantes da Coordenadoria de Interação com a Sociedade (COIS), Pró-reitoria de Extensão e Cultura (PROEX) do IFSul.</p>
+                    <a href="#">
+                        <h2>Visita de Miguel Roberto Felberg e Viviane Hernandez Serpa Ribeiro, representantes da
+                            Coordenadoria de Interação com a Sociedade (COIS), Pró-reitoria de Extensão e Cultura
+                            (PROEX) do IFSul.</h2>
+                    </a>
+                    <p>Na quarta-feira, 27 de novembro, tivemos a visita de Miguel Roberto Felberg e Viviane Hernandez
+                        Serpa Ribeiro, representantes da Coordenadoria de Interação com a Sociedade (COIS), Pró-reitoria
+                        de Extensão e Cultura (PROEX) do IFSul.</p>
                 </div>
             </div>
             <div class="outras-noticias">
                 <div class="noticia">
-                    <img src="img/WhatsApp_Image_2024-11-22_at_083056.jpeg" alt="Notícia 2">
+                    <img src="img/WhatsApp_Image_2024-11-22_at_083056.jpeg">
                     <div>
-                        <a href="#"><p>IFSul Santana do Livramento terá dois projetos sendo apresentados na 4ª Semana Nacional de Educação Profissional e Tecnológica em Brasília-DF</p></a>
+                        <a href="#">
+                            <p>IFSul Santana do Livramento terá dois projetos sendo apresentados na 4ª Semana Nacional
+                                de Educação Profissional e Tecnológica em Brasília-DF</p>
+                        </a>
                     </div>
                 </div>
                 <div class="noticia">
-                    <img src="img/WhatsApp_Image_2024-10-01_at_084718.jpeg" alt="Notícia 3">
+                    <img src="img/WhatsApp_Image_2024-10-01_at_084718.jpeg">
                     <div>
-                        <a href="#"><p>21ª Semana Nacional de Ciência e Tecnologia na Região do Pampa</p></a>
+                        <a href="#">
+                            <p>21ª Semana Nacional de Ciência e Tecnologia na Região do Pampa</p>
+                        </a>
                     </div>
                 </div>
                 <div class="noticia">
-                    <img src="img/WhatsApp_Image_2024-11-06_at_142841.jpeg" alt="Notícia 4">
+                    <img src="img/WhatsApp_Image_2024-11-06_at_142841.jpeg">
                     <div>
-                        <a href="#"><p>A Natureza</p></a>
+                        <a href="#">
+                            <p>A Natureza</p>
+                        </a>
                     </div>
                 </div>
                 <div class="noticia">
-                    <img src="img/WhatsApp_Image_2024-09-09_at_130553.jpeg" alt="Notícia 3">
+                    <img src="img/WhatsApp_Image_2024-09-09_at_130553.jpeg">
                     <div>
-                        <a href="#"><p>Câmpus Santana do Livramento reforça acervo literário com 250 novos livros</p></a>
+                        <a href="#">
+                            <p>Câmpus Santana do Livramento reforça acervo literário com 250 novos livros</p>
+                        </a>
                     </div>
                 </div>
                 <div class="noticia">
-                    <img src="img/WhatsApp_Image_2024-10-30_at_113922.jpeg" alt="Notícia 3">
+                    <img src="img/WhatsApp_Image_2024-10-30_at_113922.jpeg">
                     <div>
-                        <a href="#"><p>Documentário "Além das Telas"</p></a>
+                        <a href="#">
+                            <p>Documentário "Além das Telas"</p>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -79,32 +98,36 @@
         <section class="depoimentos">
             <h2>O que os alunos estão dizendo:</h2>
             <div class="depoimento depoimento-ativo">
-                <p>"O IFSul tem sido uma ótima experiência para minha formação."</p>
-                <p>- João, aluno de Engenharia</p>
+                <p>"O curso de Eletroeletrônica tem sido fundamental para meu desenvolvimento técnico e profissional."
+                </p>
+                <p>- William, aluno de Eletroeletrônica</p>
             </div>
             <div class="depoimento">
-                <p>"Adoro as oportunidades de estágio e as atividades extracurriculares."</p>
-                <p>- Jewan, aluna de Ciências da Computação</p>
+                <p>"O curso de Análise e Desenvolvimento de Sistemas oferece uma excelente base para atuar no mercado de
+                    tecnologia."</p>
+                <p>- Jean, aluno de Análise e Desenvolvimento de Sistemas</p>
             </div>
             <div class="depoimento">
-                <p>"Adoro as oportunidades de estágio e as atividades extracurriculares."</p>
-                <p>- luis, aluna de Ciências da Computação</p>
+                <p>"A formação em Sistemas de Energias Renováveis me prepara para enfrentar os desafios da
+                    sustentabilidade."</p>
+                <p>- Bianca, aluna de Sistemas de Energias Renováveis</p>
             </div>
             <div class="depoimento">
-                <p>"Adoro as oportunidades de estágio e as atividades extracurriculares."</p>
-                <p>- mario, aluna de Ciências da Computação</p>
+                <p>"O curso de Informática me proporcionou conhecimento em programação e infraestrutura de TI."</p>
+                <p>- Mario, aluno de Informática</p>
             </div>
         </section>
-        
+
     </main>
 
     <footer>
         <div class="logos">
-            <a href="https://utu.edu.uy" target="_blank"><img src="img/UTU_logo.png" alt="Logo UTU"></a>
-            <a href="https://utec.edu.uy" target="_blank"><img src="img/UTEC_logo.png" alt="Logo UTEC"></a>
+            <a href="https://utu.edu.uy" target="_blank"><img src="img/UTU_logo.png"></a>
+            <a href="https://utec.edu.uy" target="_blank"><img src="img/UTEC_logo.png"></a>
         </div>
     </footer>
 
     <script src="script.js"></script>
 </body>
+
 </html>
