--- a/noticia.html
+++ b/noticia.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IFNews - Detalhes da Notícia</title>
+    <title>IFNews - Visita de Miguel Roberto Felberg e Viviane Hernandez Serpa Ribeiro, representantes da Coordenadoria
+        de
+        Interação com a Sociedade (COIS), Pró-reitoria de Extensão e Cultura (PROEX) do IFSul.</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
+
 <body>
     <header>
+        <div class="logo">
+            <img src="img/IFSUL_logo.png">
+        </div>
         <nav>
             <ul>
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
                 <li class="menu-categorias">
-                    <a href="#">Categorias</a>
+                    <a>Categorias</a>
                     <ul class="categorias">
-                        <li><a href="categoria.html">Esportes</a></li>
-                        <li><a href="#">Eventos</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="#">Esportes</a></li>
+                        <li><a href="eventos.html">Eventos</a></li>
                         <li><a href="#">Institucional</a></li>
                         <li><a href="#">Premiações</a></li>
                         <li><a href="#">Envie uma notícia</a></li>
@@ -26,21 +30,41 @@
             </ul>
         </nav>
     </header>
-    
-
 
     <main>
         <section class="noticia-detalhes">
-            <h1>Visita de Miguel Roberto Felberg e Viviane Hernandez Serpa Ribeiro, representantes da Coordenadoria de Interação com a Sociedade (COIS), Pró-reitoria de Extensão e Cultura (PROEX) do IFSul.</h1>
+            <h1>Visita de Miguel Roberto Felberg e Viviane Hernandez Serpa Ribeiro, representantes da Coordenadoria de
+                Interação com a Sociedade (COIS), Pró-reitoria de Extensão e Cultura (PROEX) do IFSul.</h1>
             <div class="noticia-imagens">
-                <img id="imagem-principal" src="img/WhatsApp_Image_2024-11-28_at_124206_1.jpeg" alt="Imagem Principal" />
+                <img id="imagem-principal" src="img/WhatsApp_Image_2024-11-28_at_124206_1.jpeg"
+                    alt="Imagem Principal" />
             </div>
-            <div class="noticia-texto">
-                <p>O encontro foi marcado por uma troca de experiências e informações valiosas sobre as diversas possibilidades de profissionalização e inserção no mundo do trabalho para quem quiser ser ou já é estudante do instituto, como Programa de Aprendizagem Profissional (Jovem Aprendiz), Cursos FIC, estágios, entre outros.</p>
-                <p>Na reunião foram apresentados detalhes sobre os Cursos de Formação Inicial e Continuada (FIC), que visam proporcionar conhecimentos especializados e práticas profissionais aos alunos. Além disso, foram debatidas as mudanças aceleradas que ocorrem no mundo do trabalho e os impactos nas modalidades de estágio obrigatório e não obrigatório, considerando o olhar dos principais agentes de integração e das empresas que contratam.
-                    No entanto, o principal foco da visita foi o Programa de Aprendizagem Profissional (Jovem Aprendiz), uma iniciativa fundamental que tem impactado positivamente a vida de muitos jovens. Através desse programa, os participantes têm a chance de se desenvolver profissionalmente, conciliando a teoria com a prática em diversas áreas profissionais. Durante a apresentação, Miguel e Viviane explicaram como o programa funciona, as vantagens que ele oferece aos estudantes e como as empresas podem se beneficiar dessa ação social que também contribui para o crescimento pessoal e profissional dos aprendizes com acesso ao seu primeiro trabalho.
-                    A habilitação do IFSul/Câmpus Santana do Livramento como entidade qualificadora do Programa de Aprendizagem Profissional (Jovem Aprendiz), habilitada junto ao Ministério do Trabalho e Emprego (MTE), converge com a proposta de qualificação durante todo o processo educacional ao permitir que os estudantes tenham uma visão mais ampla sobre o mundo do trabalho e suas futuras carreiras, facilitando escolhas e decisões, que muitas vezes precisam realizar ainda muito jovens.</p>
-            </div>
+            <p class="noticia-texto">O encontro foi marcado por uma troca de experiências e informações valiosas sobre
+                as diversas
+                possibilidades de profissionalização e inserção no mundo do trabalho para quem quiser ser ou já é
+                estudante do instituto, como Programa de Aprendizagem Profissional (Jovem Aprendiz), Cursos FIC,
+                estágios, entre outros.
+                <br>
+                Na reunião foram apresentados detalhes sobre os Cursos de Formação Inicial e Continuada (FIC), que
+                visam proporcionar conhecimentos especializados e práticas profissionais aos alunos. Além disso,
+                foram debatidas as mudanças aceleradas que ocorrem no mundo do trabalho e os impactos nas
+                modalidades de estágio obrigatório e não obrigatório, considerando o olhar dos principais agentes de
+                integração e das empresas que contratam.
+                <br>
+                No entanto, o principal foco da visita foi o Programa de Aprendizagem Profissional (Jovem Aprendiz),
+                uma iniciativa fundamental que tem impactado positivamente a vida de muitos jovens. Através desse
+                programa, os participantes têm a chance de se desenvolver profissionalmente, conciliando a teoria
+                com a prática em diversas áreas profissionais. Durante a apresentação, Miguel e Viviane explicaram
+                como o programa funciona, as vantagens que ele oferece aos estudantes e como as empresas podem se
+                beneficiar dessa ação social que também contribui para o crescimento pessoal e profissional dos
+                aprendizes com acesso ao seu primeiro trabalho.
+                <br>
+                A habilitação do IFSul/Câmpus Santana do Livramento como entidade qualificadora do Programa de
+                Aprendizagem Profissional (Jovem Aprendiz), habilitada junto ao Ministério do Trabalho e Emprego
+                (MTE), converge com a proposta de qualificação durante todo o processo educacional ao permitir que
+                os estudantes tenham uma visão mais ampla sobre o mundo do trabalho e suas futuras carreiras,
+                facilitando escolhas e decisões, que muitas vezes precisam realizar ainda muito jovens.
+            </p>
         </section>
     </main>
 
@@ -53,4 +77,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
